--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,44 @@
 annotated-types==0.7.0
-anyio==4.4.0
-certifi==2024.7.4
-click==8.1.7
-dnspython==2.6.1
+anyio==4.9.0
+certifi==2025.4.26
+click==8.1.8
+dnspython==2.7.0
 email_validator==2.2.0
-fastapi==0.112.1
-fastapi-cli==0.0.5
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-idna==3.7
-Jinja2==3.1.4
+fastapi==0.115.12
+fastapi-cli==0.0.7
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.6
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 mdurl==0.1.2
-numpy==2.1.0
-nvidia-nccl-cu12==2.22.3
-pandas==2.2.2
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
+numpy==2.2.5
+nvidia-nccl-cu12==2.26.2.post1
+pandas==2.2.3
+pydantic==2.11.3
+pydantic_core==2.33.1
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
-rich==13.7.1
-scipy==1.14.1
+rich==14.0.0
+rich-toolkit==0.14.3
+scipy==1.15.2
 shellingham==1.5.4
-six==1.16.0
+six==1.17.0
 sniffio==1.3.1
-starlette==0.38.2
-typer==0.12.4
-typing_extensions==4.12.2
-tzdata==2024.1
-uvicorn==0.30.6
-uvloop==0.20.0
-watchfiles==0.23.0
-websockets==13.0
-xgboost==2.1.1
+starlette==0.46.2
+typer==0.15.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
+xgboost==3.0.0
